# perroquet

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: cli.rs  main.rs
